changed max speed and velocity in amp side autos, organized auto files, and added 7 note and partner autos

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,8 +2,14 @@
   "robotWidth": 0.597,
   "robotLength": 0.597,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
+  "pathFolders": [
+    "Amp Side",
+    "Non-Amp Side",
+    "Test Paths"
+  ],
+  "autoFolders": [
+    "Test Autos"
+  ],
   "defaultMaxVel": 4.267,
   "defaultMaxAccel": 5.0,
   "defaultMaxAngVel": 540.0,
