added and adjusted autos
Added Non-Amp Counterrace auto, Amp race and counterrace autos, adjusted amp and non-amp side autos to be more consistent and to not clip into the stage, and organized more paths and autos into folders

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -4,10 +4,15 @@
   "holonomicMode": true,
   "pathFolders": [
     "Amp Side",
+    "Race Paths",
     "Non-Amp Side",
     "Test Paths"
   ],
   "autoFolders": [
+    "Amp Side",
+    "Basic Autos",
+    "Race Autos",
+    "Non-Amp Side",
     "Test Autos"
   ],
   "defaultMaxVel": 4.267,
