cleaned up competition code

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -4,8 +4,9 @@
   "holonomicMode": true,
   "pathFolders": [
     "Amp Side",
-    "Race Paths",
+    "Partner Paths",
     "Non-Amp Side",
+    "Race Paths",
     "Test Paths"
   ],
   "autoFolders": [
